--- a/.config/nvim/pack/git/repos.conf
+++ b/.config/nvim/pack/git/repos.conf
@@ -64,20 +64,17 @@ https://github.com/tmux-plugins/vim-tmux                opt/tmux
 # }}}
 
 # /usr/local/share/nvim/site/plugin/my-pack-conf/enhancement.vim {{{
-https://github.com/MattesGroeger/vim-bookmarks          opt/bookmarks
 https://github.com/mbbill/undotree                      opt/undotree
 https://github.com/junegunn/fzf.vim                     opt/fzf
 https://github.com/tpope/vim-git                        opt/ft-gitcommit-plugin  #
 https://github.com/tpope/vim-fugitive                   opt/fugitive             # (ft-gitcommit-plugin)
-https://github.com/junegunn/gv.vim                      opt/gv                   # (fugitive)
-https://github.com/gregsexton/gitv                      opt/gitv                 # (fugitive)
 https://github.com/airblade/vim-gitgutter               opt/gitgutter
 https://github.com/kshenoy/vim-signature                opt/signature
 https://github.com/ynkdir/vim-vimlparser                opt/vimlparser
 https://github.com/syngan/vim-vimlint                   opt/vimlint              # (vimlparser)
 https://github.com/neoclide/coc.nvim                    opt/coc                  # git clone --depth=1 --single-branch --branch release https://github.com/neoclide/coc.nvim
 https://github.com/vim-ctrlspace/vim-ctrlspace          opt/ctrlspace
-https://github.com/mhinz/vim-startify                   opt/startify
+https://github.com/folke/which-key.nvim                 opt/which-key
 # }}}
 
 # ~/.config/nvim/plugin/my-pack-conf/filetype.vim {{{
