--- a/.config/nvim/pack/git/repos.conf
+++ b/.config/nvim/pack/git/repos.conf
@@ -77,7 +77,7 @@ https://github.com/vim-ctrlspace/vim-ctrlspace          opt/ctrlspace
 https://github.com/folke/which-key.nvim                 opt/which-key
 # }}}
 
-# ~/.config/nvim/plugin/my-pack-conf/filetype.vim {{{
+# /usr/local/share/nvim/site/plugin/my-pack-conf/filetype.vim {{{
 https://github.com/elzr/vim-json                        opt/json
 https://github.com/pangloss/vim-javascript              opt/javascript
 https://github.com/HerringtonDarkholme/yats.vim         opt/yats
