--- a/.config/nvim/pack/git/repos.conf
+++ b/.config/nvim/pack/git/repos.conf
@@ -1,10 +1,10 @@
+# cd /usr/local/share/nvim/site/pack/git
+
 # ручная установка start плагина:
-# git clone --depth=1 https://github.com/tpope/vim-sensible ~/.local/share/nvim/site/pack/git/start/sensible
+# git clone --depth=1 https://github.com/tpope/vim-sensible start/sensible
 
 # ручная установка opt плагина:
-# git clone --depth=1 https://github.com/christoomey/vim-tmux-navigator ~/.local/share/nvim/site/pack/git/opt/tmux-navigator
-
-# cd ~/.local/share/nvim/site/pack/git
+# git clone --depth=1 https://github.com/nvim-treesitter/nvim-treesitter opt/treesitter
 
 # fish
 # ,cat-nocomm repos.conf | awk '{print $2}' | sort | grep ' start/' # список зарегестрированных плагинов в start
@@ -18,7 +18,7 @@
 # for i in */*/.git; do ( cd $i/..; echo $i; ,git-ext-pull; echo); done
 
 # перезапуск с новыми плагинами
-# nvim -c "silent! helptags ALL" -c UpdateRemotePlugins
+# nvim -c "silent! helptags ALL" -c UpdateRemotePlugins -c TSUpdate
 
 # https://repo-url                                       dir/name                   # (depends) comment
 
@@ -77,6 +77,7 @@ https://github.com/folke/which-key.nvim                 opt/which-key
 # }}}
 
 # /usr/local/share/nvim/site/plugin/my-pack-conf/filetype.vim {{{
+https://github.com/nvim-treesitter/nvim-treesitter      opt/treesitter
 https://github.com/elzr/vim-json                        opt/json
 https://github.com/pangloss/vim-javascript              opt/javascript
 https://github.com/HerringtonDarkholme/yats.vim         opt/yats
