--- a/.config/nvim/repos.conf
+++ b/.config/nvim/repos.conf
@@ -1,4 +1,5 @@
-# cd /usr/local/share/nvim/site/pack/git
+# mkdir -p ~/.local/share/nvim/site/pack/git
+# cd ~/.local/share/nvim/site/pack/git
 
 # ручная установка start плагина:
 # git clone --depth=1 https://github.com/tpope/vim-sensible start/sensible
@@ -22,7 +23,7 @@
 
 # https://repo-url                                       dir/name                   # (depends) comment
 
-# /usr/local/share/nvim/site/plugin/my-pack-conf/base.vim {{{
+# ~/.config/nvim/site/plugin/my-pack-conf/base.vim {{{
 # навигация и работа с текстом, редактирование текущей команды в шелле или редактирование тестового поля в браузере
 https://github.com/editorconfig/editorconfig-vim        start/editorconfig
 https://github.com/tpope/vim-sensible                   start/sensible
@@ -62,7 +63,7 @@ https://github.com/roxma/vim-tmux-clipboard             opt/tmux-clipboard
 https://github.com/tmux-plugins/vim-tmux                opt/tmux
 # }}}
 
-# /usr/local/share/nvim/site/plugin/my-pack-conf/enhancement.vim {{{
+# ~/.config/nvim/site/plugin/my-pack-conf/enhancement.vim {{{
 https://github.com/mbbill/undotree                      opt/undotree
 https://github.com/junegunn/fzf.vim                     opt/fzf
 https://github.com/tpope/vim-git                        opt/ft-gitcommit-plugin  #
@@ -76,7 +77,7 @@ https://github.com/vim-ctrlspace/vim-ctrlspace          opt/ctrlspace
 https://github.com/folke/which-key.nvim                 opt/which-key
 # }}}
 
-# /usr/local/share/nvim/site/plugin/my-pack-conf/filetype.vim {{{
+# ~/.config/nvim/site/plugin/my-pack-conf/filetype.vim {{{
 https://github.com/nvim-treesitter/nvim-treesitter      opt/treesitter
 https://github.com/elzr/vim-json                        opt/json
 https://github.com/pangloss/vim-javascript              opt/javascript
