--- a/.config/nvim/repos.conf
+++ b/.config/nvim/repos.conf
@@ -7,9 +7,10 @@
 # ручная установка opt плагина:
 # git clone --depth=1 https://github.com/nvim-treesitter/nvim-treesitter opt/treesitter
 
-# fish
-# ,cat-nocomm repos.conf | awk '{print $2}' | sort | grep ' start/' # список зарегестрированных плагинов в start
+# ,cat-nocomm ~/.config/nvim/repos.conf | awk '{print $2}' | sort | grep 'start/' # список зарегестрированных плагинов в start
 # ,find-2d # список установленных плагинов
+
+# fish
 # comm -1 -3 (,find-2d | psub) (,cat-nocomm repos.conf | awk '{print $2}' | sort | psub) # список новых плагинов для установки, list
 # comm -1 -3 (,cat-nocomm repos.conf | awk '{print $2}' | sort | psub) (,find-2d | psub) # список плагинов для удаления, remove, delete
 # for line in (,cat-nocomm repos.conf); eval git clone --depth=1 --single-branch $line; end # установить все плагины, install
