--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 .config/autostart/*
 
+.config/chromium/
+.config/pulse/cookie
 .config/session/
 .config/systemsettingsrc
-.config/pulse/cookie
-.config/chromium/
 
-.local/share/kscreen/
+.local/share/RecentDocuments/
+.local/share/TelegramDesktop/
+.local/share/Trash/
 .local/share/kactivitymanagerd/
 .local/share/klipper/
+.local/share/kscreen/
 .local/share/nvim/
