--- a/.gitconfig
+++ b/.gitconfig
@@ -40,7 +40,7 @@
 	# mylog = log --pretty=format:'%h %s [%an]' --graph
 	# patch = !git --no-pager diff --no-color
 	s = --paginate status --verbose
-	a = add
+	a = add --force
 	# diff-last-commit = diff HEAD~1 HEAD~0
 	# add-all-commit = !git add --all && git commit
 	# unstage-all-diff = !git add --all && git diff HEAD && git reset HEAD
