--- a/.config/nvim/repos.conf
+++ b/.config/nvim/repos.conf
@@ -11,9 +11,10 @@
 # ,find-2d # список установленных плагинов
 
 # fish
+# cd ~/.local/share/nvim/site/pack/git
 # comm -1 -3 (,find-2d | psub) (,cat-nocomm repos.conf | awk '{print $2}' | sort | psub) # список новых плагинов для установки, list
 # comm -1 -3 (,cat-nocomm repos.conf | awk '{print $2}' | sort | psub) (,find-2d | psub) # список плагинов для удаления, remove, delete
-# for line in (,cat-nocomm repos.conf); eval git clone --depth=1 --single-branch $line; end # установить все плагины, install
+# for line in (,cat-nocomm ~/.config/nvim/repos.conf); eval git clone --depth=1 --single-branch $line; end # установить все плагины, install
 
 # zsh
 # обновить установленные плагины, update
