--- a/.config/nvim/repos.conf
+++ b/.config/nvim/repos.conf
@@ -51,6 +51,7 @@ https://github.com/godlygeek/tabular                    start/tabular
 #
 https://github.com/mileszs/ack.vim                      start/ack
 https://github.com/mtth/scratch.vim                     start/scratch
+# chmod +x ~/.local/share/nvim/site/pack/git/start/preservenoeol/noeol
 https://github.com/vim-scripts/PreserveNoEOL            start/preservenoeol
 #
 https://github.com/reedes/vim-colors-pencil             start/colors-pencil
