--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,9 +65,9 @@ bind-key N swap-window -t +1\; select-window -t +1
 
 # select-pane
 set-option -g base-index 1
-bind-key 0 run "tmux split-window -vfp 30 -t bottom '~/.bin/,ftpane'"
+bind-key ` run "tmux split-window -vfp 30 -t bottom '~/.bin/,ftpane'"
 bind-key -n C-\\ run "~/.bin/,tmux-select-ranger"
-bind-key ` last-window
+bind-key 0 last-window
 
 #####
 
